# web-v2

./: .env.example  .gitignore  CLAUDE.md  CONTENT_MIGRATION_README.md  HOW_TO_UPLOAD_WORKFLOW.md  QUICK_REFERENCE.md  SUPABASE_SETUP_GUIDE.md  ZIP_UPLOAD_GUIDE.md  docker-compose.dev.yml  docker-compose.yml  git-commit-hash.txt  index.html  package-lock.json  package.json  render.staging.yaml  render.yaml  vercel.json  vite.config.js
.storybook/: preview.js
api/: databank.js  health.js
backend/: Dockerfile  Dockerfile.dev  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/endpoints/: auth.py  bedrock_courses.py  chat.py  content_items.py  databank.py  docs.py  docs_sync.py  skills.py  subagents.py  tools.py  workflow_generator.py
backend/app/core/: config.py  database.py
backend/app/crud/: content_items.py  user_profile.py
backend/app/models/: __init__.py  user_profile.py.disabled
backend/app/models/content_model/: content_items.py
backend/app/models/course_model/: bedrock_course_generator.py  course_export.py  course_generator.py  course_models.py  course_repository.py
backend/app/models/docs_model/: __init__.py  docs_service.py  frontmatter.py  schemas.py
backend/app/models/user_model/: postgres_auth_service.py
backend/app/schemas/: content_items.py  user_profile.py
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  package-lock.json  package.json  server.js  vite.config.js
log/: 20251115_gitthub_workflow_directory_reorganization.md  20251115_gitthub_workflow_final_summary.md  (+10 more)
(+250 files in other folders)
